# sift-cuda-maps

./: CMakeLists.txt  CudaSift-Maxwell.kdev4  README.md
.kdev4/: CudaSift-Maxwell.kdev4
